FF Bug Fix: Floating footer / double scroll bar
Switching radio button position to relative seems to remove the double scroll bars on FF bug and prevent the floating footer.

See Issue 33

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -300,7 +300,7 @@ input[type="radio"] {
   /* To reposition default radio selector so that :focus border style better fits around each radio input field.
   Also changed .field-radio-button top margin from -12px to 4px to keep desired style */
 input[type="radio"] {
-  position: absolute;
+  position: relative;
   margin: 0 !important;
   padding: 0 !important;
   height: 0;
